// Schema definition for provider messages.

syntax = "proto3";

package api.v1.provider;

// Enumerate all possible provider request messages.
message Request {
	oneof request {
		RemoteUploadDataRequest remote_upload_data_request = 1;
		RemoteDownloadDataRequest remote_download_data_request = 2;
	}
}

// Enumerate all possible provider response messages.
message Response {
	oneof response {
		RemoteUploadDataResponse remote_upload_data_response = 1;
		RemoteDownloadDataResponse remote_download_data_response = 2;
	}
}

// Remote data upload request.
message RemoteUploadDataRequest {
	// Location to store data.
	bytes file_key = 1;
	// Data to store.
	bytes file_key_proof = 2;
	// Bucket ID is only required to pass the allow list check for Bucket operations.
	optional bytes bucket_id = 3;
}

// Remote data upload response.
message RemoteUploadDataResponse {
	// Success or failure of the upload.
	bool success = 1;
	// Whether the file is completely uploaded.
	bool file_complete = 2;
}

// Remote data download request.
message RemoteDownloadDataRequest {
	// Data locations to read from.
	bytes file_key = 1;
	// File chunk ID to be sent.
	uint64 file_chunk_id = 2;
	// Bucket ID is only required to pass the allow list check for Bucket operations.
	optional bytes bucket_id = 3;
}

// Remote data download response.
message RemoteDownloadDataResponse {
	// Read data stored in provider. No data means that the provider
	// couldn't retrieve the data at the requested locations.
	bytes file_key_proof = 1;
}
